What's New in IDLE 3.8.4
Released on 2020-07-03?
======================================


bpo-40723: Make test_idle pass when run after import.
Patch by Florian Dahlitz.


What's New in IDLE 3.8.3
Released on 2020-05-13
======================================

bpo-38689: IDLE will no longer freeze when inspect.signature fails
when fetching a calltip.

bpo-27115: For 'Go to Line', use a Query entry box subclass with
IDLE standard behavior and improved error checking.

bpo-39885: When a context menu is invoked by right-clicking outside
of a selection, clear the selection and move the cursor.  Cut and
Copy require that the click be within the selection.

bpo-39852: Edit "Go to line" now clears any selection, preventing
accidental deletion.  It also updates Ln and Col on the status bar.

bpo-39781: Selecting code context lines no longer causes a jump.

bpo-39663: Add tests for pyparse find_good_parse_start().


What's New in IDLE 3.8.2
Released on 2020-02-17
======================================

bpo-39600: Remove duplicate font names from configuration list.

bpo-38792: Close a shell calltip if a :exc:`KeyboardInterrupt`
or shell restart occurs.  Patch by Zackery Spytz.

bpo-30780: Add remaining configdialog tests for buttons and
highlights and keys tabs.

bpo-39388: Settings dialog Cancel button cancels pending changes.

bpo-39050: Settings dialog Help button again displays help text.

bpo-32989: Add tests for editor newline_and_indent_event method.
Remove unneeded arguments and dead code from pyparse
find_good_parse_start method.


What's New in IDLE 3.8.1
Released on 2019-12-18
======================================

bpo-38943: Fix autocomplete windows not always appearing on some
systems.  Patch by Johnny Najera.

bpo-38944: Escape key now closes IDLE completion windows.  Patch by
Johnny Najera.

bpo-38862: 'Strip Trailing Whitespace' on the Format menu removes extra
newlines at the end of non-shell files.
