@@ -3,6 +3,8 @@ Released on 2020-07-03?
 ======================================
 
 
+bpo-41144: Make Open Module open a special module such as os.path.
+
 bpo-40723: Make test_idle pass when run after import.
 Patch by Florian Dahlitz.
 
